fix: Errors in css focus visible

--- a/packages/css/src/formElements/combobox/combobox.css
+++ b/packages/css/src/formElements/combobox/combobox.css
@@ -118,7 +118,7 @@
   cursor: pointer;
   line-height: 150%;
 
-  &:focus-visible-visible {
+  &:focus-visible {
     outline: 2px solid var(--mdPrimaryColor);
     outline-offset: -2px;
   }
